[tool.poetry]
name = "txton"
version = "0.1.0"
description = ""
authors = ["gravo-lan <alvintsolh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
